Enhance logging in App, LoadBalancer, ConsistentHashRing, ServerManager, and SimpleServer for improved clarity and consistency; switch to parameterized logging to prevent message concatenation.